--- a/package.json
+++ b/package.json
@@ -13,15 +13,24 @@
   "author": "Dary Chitadze <ms.darri2003@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "cookie-parser": "^1.4.5",
+    "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "passport": "^0.4.1"
+    "express-validator": "^6.6.1",
+    "helmet": "^4.0.0",
+    "knex": "^0.21.2",
+    "nodemailer": "^6.4.11",
+    "passport": "^0.4.1",
+    "pg": "^8.3.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^3.7.1",
     "eslint": "^6.6.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-plugin-import": "^2.21.2",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "typescript": "^3.9.7"
   },
   "private": true,
   "type": "modules"
