--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
     "helmet": "^4.0.0",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.2",
     "nodemailer": "^6.4.11",
-    "passport": "^0.4.1",
     "pg": "^8.3.0"
   },
   "devDependencies": {
