--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,5 +40,6 @@
   },
   "devDependencies": {
     "typescript": "^3.9.7"
-  }
+  },
+  "proxy": "http://localhost:4000"
 }
