--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "server": "node index.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"nodemon run server\" \"npm run client\""
   },
   "keywords": [
     "link",
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "concurrently": "^5.3.0",
     "cookie-parser": "^1.4.5",
     "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
@@ -24,8 +25,10 @@
     "helmet": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.2",
+    "nanoid": "^3.1.12",
     "nodemailer": "^6.4.11",
-    "pg": "^8.3.0"
+    "pg": "^8.3.0",
+    "react-copy-to-clipboard": "^5.0.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.7.1",
