--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "helmet": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.2",
+    "moment": "^2.27.0",
     "nanoid": "^3.1.12",
     "nodemailer": "^6.4.11",
     "pg": "^8.3.0",
